python/testData/highlighting/assignmentTargetWith.py
with open("") as <error descr="Can't assign to operator">my_<<var</error>:
    pass